# push_swap

./: CMakeLists.txt  Makefile  a.out  author  checker  push_swap  test.sh  testik.c
checker.dSYM/Contents/Resources/DWARF/: checker
checker_includes/: checker.h
checker_srcs/: apply_instructions.c  apply_instructions_2.c  checker.c  get_instructions.c  main.c  reader.c  reader_checker.c  visualizer.c
includes/: checker.h
libft/: Makefile
libft/includes/: ft_printf.h  get_next_line.h  get_next_line.h.gch  libft.h  libft.h.gch
libft/libft/sources/: ft_memccpy.c  ft_striter.c  ft_strnstr.c  ft_strstr.c  get_next_line.c
libft/sources/: add_z.c  apply_flags.c  c_str.c  chck_b.c  chck_c.c  chck_di.c  chck_e.c  chck_f.c  chck_g.c  chck_o.c  chck_p.c  chck_sr.c  chck_u.c  chck_x.c  chck_xu.c  e_zrs.c  fld_edge.c  fr_p.c  ft_abs.c  ft_add_pl.c  ft_app_d_prs.c  ft_app_fl.c  ft_app_width.c  ft_atoi.c  ft_bufjoin.c  ft_bzero.c  ft_c.c  ft_cycle6.c  ft_d.c  ft_e.c  ft_factorial.c  ft_fld.c  ft_free_output.c  ft_g.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  (+83 more)
libft/srcs/: ft_add_pl.c  ft_app_fl.c
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
srcs/: alg_five.c  algorithm.c  algorithm_two.c  apply_instructions.c  apply_instructions_2.c  begin_algorithm.c  bonus_fnct.c  checker.c  funct_three.c  funct_two.c  functions.c  get_act.c  get_instructions.c  new_algo.c  push_swap.c  quick_sort.c  reader_checker.c  reader_plus.c  visualizer.c
