cmake_minimum_required(VERSION 3.14)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(checker_includes)
include_directories(libft/includes)
include_directories(libft/libft/includes)

add_executable(push_swap
        checker_includes/checker.h
        checker_srcs/main.c
        checker_srcs/reader.c
        libft/includes/ft_printf.h
        libft/libft/includes/get_next_line.h
        libft/libft/includes/libft.h
        libft/libft/sources/ft_abs.c
        libft/libft/sources/ft_atoi.c
        libft/libft/sources/ft_bzero.c
        libft/libft/sources/ft_factorial.c
        libft/libft/sources/ft_isalnum.c
        libft/libft/sources/ft_isalpha.c
        libft/libft/sources/ft_isascii.c
        libft/libft/sources/ft_isdigit.c
        libft/libft/sources/ft_isprint.c
        libft/libft/sources/ft_itoa.c
        libft/libft/sources/ft_lstadd.c
        libft/libft/sources/ft_lstdel.c
        libft/libft/sources/ft_lstdelone.c
        libft/libft/sources/ft_lstiter.c
        libft/libft/sources/ft_lstmap.c
        libft/libft/sources/ft_lstnew.c
        libft/libft/sources/ft_memalloc.c
        libft/libft/sources/ft_memccpy.c
        libft/libft/sources/ft_memchr.c
        libft/libft/sources/ft_memcmp.c
        libft/libft/sources/ft_memcpy.c
        libft/libft/sources/ft_memdel.c
        libft/libft/sources/ft_memmove.c
        libft/libft/sources/ft_memset.c
        libft/libft/sources/ft_putchar.c
        libft/libft/sources/ft_putchar_fd.c
        libft/libft/sources/ft_putendl.c
        libft/libft/sources/ft_putendl_fd.c
        libft/libft/sources/ft_putnbr.c
        libft/libft/sources/ft_putnbr_fd.c
        libft/libft/sources/ft_putstr.c
        libft/libft/sources/ft_putstr_fd.c
        libft/libft/sources/ft_sqrt.c
        libft/libft/sources/ft_strcat.c
        libft/libft/sources/ft_strchr.c
        libft/libft/sources/ft_strclr.c
        libft/libft/sources/ft_strcmp.c
        libft/libft/sources/ft_strcpy.c
        libft/libft/sources/ft_strdel.c
        libft/libft/sources/ft_strdup.c
        libft/libft/sources/ft_strequ.c
        libft/libft/sources/ft_striter.c
        libft/libft/sources/ft_striteri.c
        libft/libft/sources/ft_strjoin.c
        libft/libft/sources/ft_strlcat.c
        libft/libft/sources/ft_strlen.c
        libft/libft/sources/ft_strmap.c
        libft/libft/sources/ft_strmapi.c
        libft/libft/sources/ft_strncat.c
        libft/libft/sources/ft_strncmp.c
        libft/libft/sources/ft_strncpy.c
        libft/libft/sources/ft_strnequ.c
        libft/libft/sources/ft_strnew.c
        libft/libft/sources/ft_strnstr.c
        libft/libft/sources/ft_strrchr.c
        libft/libft/sources/ft_strrev.c
        libft/libft/sources/ft_strsplit.c
        libft/libft/sources/ft_strstr.c
        libft/libft/sources/ft_strsub.c
        libft/libft/sources/ft_strtrim.c
        libft/libft/sources/ft_tolower.c
        libft/libft/sources/ft_toupper.c
        libft/libft/sources/get_next_line.c
        libft/srcs/add_z.c
        libft/srcs/apply_flags.c
        libft/srcs/c_str.c
        libft/srcs/chck_b.c
        libft/srcs/chck_c.c
        libft/srcs/chck_di.c
        libft/srcs/chck_e.c
        libft/srcs/chck_f.c
        libft/srcs/chck_g.c
        libft/srcs/chck_o.c
        libft/srcs/chck_p.c
        libft/srcs/chck_sr.c
        libft/srcs/chck_u.c
        libft/srcs/chck_x.c
        libft/srcs/chck_xu.c
        libft/srcs/e_zrs.c
        libft/srcs/fld_edge.c
        libft/srcs/fr_p.c
        libft/srcs/ft_add_pl.c
        libft/srcs/ft_app_d_prs.c
        libft/srcs/ft_app_fl.c
        libft/srcs/ft_app_width.c
        libft/srcs/ft_bufjoin.c
        libft/srcs/ft_c.c
        libft/srcs/ft_cycle6.c
        libft/srcs/ft_d.c
        libft/srcs/ft_e.c
        libft/srcs/ft_fld.c
        libft/srcs/ft_free_output.c
        libft/srcs/ft_g.c
        libft/srcs/ft_itoa_base.c
        libft/srcs/ft_itoa_fp.c
        libft/srcs/ft_ox.c
        libft/srcs/ft_p.c
        libft/srcs/ft_printf.c
        libft/srcs/ft_put_out.c
        libft/srcs/ft_put_percent.c
        libft/srcs/ft_rg.c
        libft/srcs/ft_round.c
        libft/srcs/ft_s.c
        libft/srcs/ft_solver.c
        libft/srcs/ft_u.c
        libft/srcs/int_p.c
        libft/srcs/mantis.c
        libft/srcs/mexp.c
        libft/srcs/pw.c
        libft/srcs/pw_to_str.c
        libft/srcs/reader.c
        libft/srcs/res_o_fr.c
        libft/srcs/res_w_fr.c
        libft/srcs/rnd.c
        libft/srcs/rnd_z.c
        libft/srcs/rndg.c
        libft/srcs/rndg_z.c
        libft/srcs/s_str.c
        libft/srcs/str_ad.c
        libft/srcs/str_ml.c
        libft/srcs/t_str.c
        libft/srcs/wzrs.c
        libft/srcs/zrs.c)
