cmake_minimum_required(VERSION 3.14)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(checker_includes)
include_directories(libft/includes)

add_executable(push_swap
        checker_includes/checker.h
        checker_srcs/apply_instructions.c
        checker_srcs/apply_instructions_2.c
        checker_srcs/get_instructions.c
        checker_srcs/checker.c
        checker_srcs/reader_checker.c
        checker_srcs/visualizer.c
        libft/includes/ft_printf.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/sources/add_z.c
        libft/sources/apply_flags.c
        libft/sources/c_str.c
        libft/sources/chck_b.c
        libft/sources/chck_c.c
        libft/sources/chck_di.c
        libft/sources/chck_e.c
        libft/sources/chck_f.c
        libft/sources/chck_g.c
        libft/sources/chck_o.c
        libft/sources/chck_p.c
        libft/sources/chck_sr.c
        libft/sources/chck_u.c
        libft/sources/chck_x.c
        libft/sources/chck_xu.c
        libft/sources/e_zrs.c
        libft/sources/fld_edge.c
        libft/sources/fr_p.c
        libft/sources/ft_abs.c
        libft/sources/ft_add_pl.c
        libft/sources/ft_app_d_prs.c
        libft/sources/ft_app_fl.c
        libft/sources/ft_app_width.c
        libft/sources/ft_atoi.c
        libft/sources/ft_bufjoin.c
        libft/sources/ft_bzero.c
        libft/sources/ft_c.c
        libft/sources/ft_cycle6.c
        libft/sources/ft_d.c
        libft/sources/ft_e.c
        libft/sources/ft_factorial.c
        libft/sources/ft_fld.c
        libft/sources/ft_free_output.c
        libft/sources/ft_g.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_isprint.c
        libft/sources/ft_itoa.c
        libft/sources/ft_itoa_base.c
        libft/sources/ft_itoa_fp.c
        libft/sources/ft_lstadd.c
        libft/sources/ft_lstdel.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_memalloc.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memdel.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_ox.c
        libft/sources/ft_p.c
        libft/sources/ft_printf.c
        libft/sources/ft_put_out.c
        libft/sources/ft_put_percent.c
        libft/sources/ft_putchar.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putstr.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_rg.c
        libft/sources/ft_round.c
        libft/sources/ft_s.c
        libft/sources/ft_solver.c
        libft/sources/ft_sqrt.c
        libft/sources/ft_strcat.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strclr.c
        libft/sources/ft_strcmp.c
        libft/sources/ft_strcpy.c
        libft/sources/ft_strdel.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strequ.c
        libft/sources/ft_striter.c
        libft/sources/ft_striteri.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strmap.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncat.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strncpy.c
        libft/sources/ft_strnequ.c
        libft/sources/ft_strnew.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strrev.c
        libft/sources/ft_strsplit.c
        libft/sources/ft_strstr.c
        libft/sources/ft_strsub.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        libft/sources/ft_u.c
        libft/sources/get_next_line.c
        libft/sources/int_p.c
        libft/sources/mantis.c
        libft/sources/mexp.c
        libft/sources/pw.c
        libft/sources/pw_to_str.c
        libft/sources/reader.c
        libft/sources/res_o_fr.c
        libft/sources/res_w_fr.c
        libft/sources/rnd.c
        libft/sources/rnd_z.c
        libft/sources/rndg.c
        libft/sources/rndg_z.c
        libft/sources/s_str.c
        libft/sources/str_ad.c
        libft/sources/str_ml.c
        libft/sources/t_str.c
        libft/sources/wzrs.c
        libft/sources/zrs.c)
